--- a/Avengale/Packages/manifest.json
+++ b/Avengale/Packages/manifest.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "3.1.0",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.0",
+    "com.unity.mobile.android-logcat": "1.1.1",
     "com.unity.test-framework": "1.1.11",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.10",
